add favicon;add resume

--- a/about.html
+++ b/about.html
@@ -9,10 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./styles.css" />
-
-    <style>
-
-    </style>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
@@ -39,7 +36,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid bg-3 text-center">
+    <div class="container-fluid bg-3">
         <div class="row align-items-center">
             <div class="col-xl-6 col-lg-6 col-md-10">
                 <div class="about-caption mb-50">
@@ -69,6 +66,7 @@
                         Reliable,
                         Team-oriented,
                         Transparent.</p>
+                        <p class="resume"><a href="./assets/resume.pdf" download="becky-peltz-resume">Click to Download Resume</a></p>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -83,27 +81,27 @@
         <div class="row">
             <div class="card col-sm-2">
                 <img class="card-img-top" src="https://res.cloudinary.com/picturecloud7/image/upload/h_200,w_200,b_tan
-                /l_text:Arial_20:Captivate/capstone/1px.png" alt="Card image cap">
+                /l_text:Arial_20:Media/capstone/1px.png" alt="Card image cap">
             </div>
             <div class="card col-sm-2">
                 <img class="card-img-top" src="https://res.cloudinary.com/picturecloud7/image/upload/h_200,w_200,b_tan
-                /l_text:Arial_20:Captivate/capstone/1px.png" alt="Card image cap">
+                /l_text:Arial_20:React/capstone/1px.png" alt="Card image cap">
             </div>
             <div class="card col-sm-2">
                 <img class="card-img-top" src="https://res.cloudinary.com/picturecloud7/image/upload/h_200,w_200,b_tan
-                /l_text:Arial_20:Captivate/capstone/1px.png" alt="Card image cap">
+                /l_text:Arial_20:Node.js/capstone/1px.png" alt="Card image cap">
             </div>
             <div class="card col-sm-2">
                 <img class="card-img-top" src="https://res.cloudinary.com/picturecloud7/image/upload/h_200,w_200,b_tan
-                /l_text:Arial_20:Captivate/capstone/1px.png" alt="Card image cap">
+                /l_text:Arial_20:Canvas LMS/capstone/1px.png" alt="Card image cap">
             </div>
             <div class="card col-sm-2">
                 <img class="card-img-top" src="https://res.cloudinary.com/picturecloud7/image/upload/h_200,w_200,b_tan
-                /l_text:Arial_20:Captivate/capstone/1px.png" alt="Card image cap">
+                /l_text:Arial_20:Camtasia/capstone/1px.png" alt="Card image cap">
             </div>
             <div class="card col-sm-2">
                 <img class="card-img-top" src="https://res.cloudinary.com/picturecloud7/image/upload/h_200,w_200,b_tan
-                /l_text:Arial_20:Captivate/capstone/1px.png" alt="Card image cap">
+                /l_text:Arial_20:Descript/capstone/1px.png" alt="Card image cap">
             </div>
         </div>
     </div>
@@ -131,7 +129,7 @@
 
 
         <div class="copyright py-4 text-center text-white">
-            <div><small>Copyright © Your Website 2022</small></div>
+            <div><small>Copyright ©RebeccaPeltz 2022</small></div>
         </div>
     </footer>
 
