--- a/index-test.html
+++ b/index-test.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
@@ -151,7 +152,7 @@
             </div>
         </div>
         <div class="copyright py-4 text-center text-white">
-            <div><small>Copyright © Your Website 2022</small></div>
+            <div><small>Copyright ©RebeccaPeltz 2022</small></div>
         </div>
     </footer>
 
