--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
@@ -40,9 +41,11 @@
     <div class="jumbotron">
         <div class="container text-center">
             <h1>Becky Peltz</h1>
-            <p class="home-intro">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.</p>
+            <p class="home-intro">I am a Developer Educator.  I graduated from University of Washington with an MBA.  While I was in graduate school I started 
+                programming as a Research Assistant.  After graduation, I sought out positions as a Database Programmer.  In the late 1990's, as the internet 
+                was evolving, I started working as an application developer.  I've taught programming throughout my career and in 2016 moved into full time teaching.  
+                I'm currently employed at Cloudinary as a Curriculum Program Manager in Customer Education.
+            </p>
         </div>
     </div>
 
@@ -134,7 +137,7 @@
             </div>
         </div>
         <div class="copyright py-4 text-center text-white">
-            <div><small>Copyright © Your Website 2022</small></div>
+            <div><small>Copyright ©RebeccaPeltz 2022</small></div>
         </div>
     </footer>
 
