add links and descriptions to projects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <p class="home-intro">I am a Developer Educator.  I graduated from University of Washington with an MBA.  While I was in graduate school I started 
                 programming as a Research Assistant.  After graduation, I sought out positions as a Database Programmer.  In the late 1990's, as the internet 
                 was evolving, I started working as an application developer.  I've taught programming throughout my career and in 2016 moved into full time teaching.  
-                I'm currently employed at Cloudinary as a Curriculum Program Manager in Customer Education.
+                I'm currently employed at Cloudinary as a Curriculum Program Manager in Customer Education.  I'm graduating with an MS in Instructonal Design from Quinnipiac
+                Univeristy in December 2022.
             </p>
         </div>
     </div>
@@ -53,29 +54,26 @@
         <h3>My Work</h3><br>
         <div class="row">
             <div class="card col-sm-4">
-                <img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/ar_1.1,c_fill,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/positioning-zoom.png" alt="Card image cap">
+                <a href="https://www.beckypeltz.me/positioning/index.html" target="_blank"><img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/ar_1.1,c_fill,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/positioning-zoom.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Compass Positioning</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">I wrote this little application as a teaching aid to help show Cloudinary Customer Education students how compass positioning works in creating overlays. </p>
                     <a href="./project-1.html" class="btn btn-primary">Project Details</a>
                 </div>
             </div>
             <div class="card col-sm-4">
-                <img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/ar_1.1,c_fill,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/transformation-concentration.png" alt="Card image cap">
+                <a href="https://transformation-concentration.netlify.app/" target="_blank"><img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/ar_1.1,c_fill,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/transformation-concentration.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Transformation Game</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">This game is used to help players learn about Cloudinary effects and then recognize them visually in a memory game modeled on the game of Concentration.</p>
                     <a href="./project-2.html" class="btn btn-primary">Project Details</a>
                 </div>
             </div>
             <div class="card col-sm-4">
-                <img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/essentials.png" alt="Card image cap">
+                <a href="https://youtu.be/VYn3dLKNe1M" target="_blank"><img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/essentials.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Hiking Essentials</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">I created this video as an assignment to in my studies at Quinnipiac Univeristy. I want the viewer to learn the Hiking 10 essentials in a visual way.</p>
                     <a href="./project-3.html" class="btn btn-primary">Project Details</a>
                 </div>
             </div>
@@ -86,29 +84,32 @@
     <div class="container-fluid bg-4 text-center">
         <div class="row">
             <div class="card col-sm-4">
-                <img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/cwv.png" alt="Card image cap">
+                <a href="https://youtu.be/ab6r-7064xo" target="_blank"><img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/cwv.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Core Web Vitals</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">Core Web Vitals are a set of measurements that are important to web developers who work with images and video.  CWV provide a set of measures that google 
+                        uses to help rank web pages.  If you want your web page to rise to the top, you need to optimze it. <tbody></tbody></p>
                     <a href="./project-4.html" class="btn btn-primary">Project Details</a>
                 </div>
             </div>
             <div  class="card col-sm-4">
-                <img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/accessibility.png" alt="Card image cap">
+                <a href="https://www.youtube.com/watch?v=hUorp_9B48A" target="_blank"><img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/accessibility.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Accessibility</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">In a course on web design, I created a website that describes and implements rules relating to web accessibility.  My goal was to share 
+                        accessbility concepts and bring them to life in the web pages.  Even the colors and fonts I used were chosen with accessility in mind.
+                    </p>
                     <a href="./project-5.html" class="btn btn-primary">Project Details</a>
                 </div>
             </div>
             <div  class="card col-sm-4">
-                <img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/periodic_b73ur2.png" alt="Card image cap">
+                <a href="https://www.beckypeltz.me/cld-periodic-table/" target="_blank"><img class="card-img-top home-image" src="https://res.cloudinary.com/picturecloud7/image/upload/w_700,h_700,c_pad,b_auto,bo_5px_solid_lightgray,f_auto,q_auto:best/capstone/periodic_b73ur2.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Periodic Table of Transformations</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">Cloudinary "transformations" optimize and enhance your media. 
+                         I wanted a way to make it easy to get to the documentation on each one.  The perfect 
+                        metaphor was the Periodic Table.  This is an interactive web application to help learn Cloudinary transformations.
+                    </p>
                     <a href="./project-5.html" class="btn btn-primary">Project Details</a>
                 </div>
             </div>
