--- a/index-test.html
+++ b/index-test.html
@@ -136,16 +136,16 @@
             <div class="row">
                 <!-- Footer Social Icons-->
                 <div class="mb-0">
-                    <a href="https://www.linkedin.com" target="blank" class="svg">
+                    <a href="https://www.linkedin.com/in/rebeccapeltz/" target="blank" class="svg">
                         <object data="./assets/linkedin-with-circle.svg" width="50" height="50"> </object>
                     </a>
-                    <a href="https://www.twitter.com" target="blank" class="svg">
+                    <a href="https://twitter.com/RebeccaPeltz" target="blank" class="svg">
                         <object data="./assets/twitter-circle.svg" width="50" height="50"> </object>
                     </a>
-                    <a href="https://www.instagram.com" target="blank" class="svg">
+                    <a href="https://www.instagram.com/rebeccapeltz" target="blank" class="svg">
                         <object data="./assets/instagram-with-circle.svg" width="50" height="50"> </object>
                     </a>
-                    <a href="https://www.github.com" target="blank" class="svg">
+                    <a href="https://github.com/rebeccapeltz" target="blank" class="svg">
                         <object data="./assets/brand-github.svg" width="50" height="50"> </object>
                     </a>
                 </div>
